@@ -71,7 +71,8 @@ namespace KJS {
 
     enum { ToString, ValueOf, CharAt, CharCodeAt, Concat, IndexOf, LastIndexOf,
 	   Match, Replace, Search, Slice, Split,
-	   Substr, Substring, FromCharCode, ToLowerCase, ToUpperCase
+	   Substr, Substring, FromCharCode, ToLowerCase, ToUpperCase,
+           ToLocaleLowerCase, ToLocaleUpperCase
 #ifndef KJS_PURE_ECMA
 	   , Big, Small, Blink, Bold, Fixed, Italics, Strike, Sub, Sup,
 	   Fontcolor, Fontsize, Anchor, Link
