@@ -9,10 +9,10 @@ const struct HashEntry stringTableEntries[] = {
    { "bold", StringProtoFuncImp::Bold, DontEnum|Function, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "lastIndexOf", StringProtoFuncImp::LastIndexOf, DontEnum|Function, 1, 0 },
-   { "replace", StringProtoFuncImp::Replace, DontEnum|Function, 2, 0 },
+   { "replace", StringProtoFuncImp::Replace, DontEnum|Function, 2, &stringTableEntries[29] },
    { "match", StringProtoFuncImp::Match, DontEnum|Function, 1, &stringTableEntries[27] },
-   { "search", StringProtoFuncImp::Search, DontEnum|Function, 1, &stringTableEntries[34] },
-   { 0, 0, 0, 0, 0 },
+   { "search", StringProtoFuncImp::Search, DontEnum|Function, 1, &stringTableEntries[35] },
+   { "toLocaleUpperCase", StringProtoFuncImp::ToLocaleUpperCase, DontEnum|Function, 0, 0 },
    { "concat", StringProtoFuncImp::Concat, DontEnum|Function, 1, &stringTableEntries[26] },
    { 0, 0, 0, 0, 0 },
    { "split", StringProtoFuncImp::Split, DontEnum|Function, 2, &stringTableEntries[28] },
@@ -22,27 +22,28 @@ const struct HashEntry stringTableEntries[] = {
    { "link", StringProtoFuncImp::Link, DontEnum|Function, 1, 0 },
    { "indexOf", StringProtoFuncImp::IndexOf, DontEnum|Function, 1, 0 },
    { 0, 0, 0, 0, 0 },
-   { "small", StringProtoFuncImp::Small, DontEnum|Function, 0, &stringTableEntries[32] },
+   { "small", StringProtoFuncImp::Small, DontEnum|Function, 0, &stringTableEntries[33] },
    { "sub", StringProtoFuncImp::Sub, DontEnum|Function, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "valueOf", StringProtoFuncImp::ValueOf, DontEnum|Function, 0, &stringTableEntries[29] },
+   { "valueOf", StringProtoFuncImp::ValueOf, DontEnum|Function, 0, &stringTableEntries[30] },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "charAt", StringProtoFuncImp::CharAt, DontEnum|Function, 1, 0 },
    { "fontsize", StringProtoFuncImp::Fontsize, DontEnum|Function, 1, 0 },
    { "substr", StringProtoFuncImp::Substr, DontEnum|Function, 2, 0 },
-   { "slice", StringProtoFuncImp::Slice, DontEnum|Function, 2, &stringTableEntries[30] },
+   { "slice", StringProtoFuncImp::Slice, DontEnum|Function, 2, &stringTableEntries[31] },
    { "substring", StringProtoFuncImp::Substring, DontEnum|Function, 2, 0 },
    { "toLowerCase", StringProtoFuncImp::ToLowerCase, DontEnum|Function, 0, 0 },
-   { "big", StringProtoFuncImp::Big, DontEnum|Function, 0, &stringTableEntries[35] },
-   { "blink", StringProtoFuncImp::Blink, DontEnum|Function, 0, &stringTableEntries[31] },
-   { "fixed", StringProtoFuncImp::Fixed, DontEnum|Function, 0, &stringTableEntries[33] },
+   { "toLocaleLowerCase", StringProtoFuncImp::ToLocaleLowerCase, DontEnum|Function, 0, 0 },
+   { "big", StringProtoFuncImp::Big, DontEnum|Function, 0, &stringTableEntries[36] },
+   { "blink", StringProtoFuncImp::Blink, DontEnum|Function, 0, &stringTableEntries[32] },
+   { "fixed", StringProtoFuncImp::Fixed, DontEnum|Function, 0, &stringTableEntries[34] },
    { "italics", StringProtoFuncImp::Italics, DontEnum|Function, 0, 0 },
    { "strike", StringProtoFuncImp::Strike, DontEnum|Function, 0, 0 },
    { "sup", StringProtoFuncImp::Sup, DontEnum|Function, 0, 0 },
    { "fontcolor", StringProtoFuncImp::Fontcolor, DontEnum|Function, 1, 0 }
 };
 
-const struct HashTable stringTable = { 2, 36, stringTableEntries, 26 };
+const struct HashTable stringTable = { 2, 37, stringTableEntries, 26 };
 
 } // namespace
